compiler/weave_syntax/tests/data/Numbers.error
error: Expected '[token:identifier]'
        --> <source>:2:2
         |
       2 | .2137
         |  ^^^^
error: Expected '[token:identifier]'
        --> <source>:4:1
         |
       4 | 3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:4:5
         |
       4 | 3.3.3
         |     ^
error: Expected '[token:identifier]'
        --> <source>:5:5
         |
       5 | 3.3.3.
         |     ^
error: Expected '[token:identifier]'
        --> <source>:6:1
         |
       6 | 3.3.3.3
         | ^^^
error: Expected '[token:identifier]'
        --> <source>:6:5
         |
       6 | 3.3.3.3
         |     ^^^
error: Expected '[token:identifier]'
        --> <source>:7:4
         |
       7 | _0.3
         |    ^
error: Expected '[token:identifier]'
        --> <source>:11:1
         |
      11 | 9x
         | ^^
error: Expected '[token:identifier]'
        --> <source>:21:1
         |
      21 | 0.3_e10_
         | ^^^^^^^^
error: Expected '{'
        --> <source>:21:1
         |
      21 | 0.3_e10_
         | ^^^^^^^^
error: Expected '[token:identifier]'
        --> <source>:53:4
         |
      53 | 0x.3f32
         |    ^^^^
error: Expected '}'
        --> <source>:121:1
         |
     121 | 
         | ^
